<resources>
    <string name="app_name">TicketAppKotlin</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="memulai">Memulai</string>

    <string name="now_playing">Now Playing</string>
    <string name="sign_in">Sign In</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="cashless">Cashless</string>

    <string name="descripsi">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="descripsi2">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="descripsi3">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register new Account ?</string>
    <string name="input_username">Input Your Username</string>
    <string name="input_password">Input Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="input_nama">Input Your Name</string>
    <string name="email">Email Address</string>
    <string name="input_email">Input Your Email</string>
    <string name="next">Next</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="welcome_name">Welcome, \nNaufal Nur Ihsan</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard">Storyboard</string>
    <string name="decs_storyboard">The Avengers must stop Thanos, a mad Titan, and his \narmy from getting their hands on all the infinity stones. \nHowever, the mad Titan is prepared to go to any lengths \nto carry out his insane plan.</string>
    <string name="who_played">Who’s Played</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="screen">Screen</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="check_out">Check Out</string>
    <string name="when">When</string>
    <string name="items">Items</string>
    <string name="ewallet">E-Wallet</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="pay_now">Pay Now</string>
    <string name="cancle">Cancle</string>
    <string name="cinema">Cinema</string>
    <string name="total">Total Bill</string>
    <string name="total_ballance">Total Balance</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="desc_succes_buy">Tiket telah berhasil dibeli dan \nselamat menikmati film</string>
    <string name="home">Home</string>
    <string name="see_ticket">See Ticket</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="current_ballance">Current Balance</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>


</resources>